--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 <section class="cta">
   <h2>Ready to Take Admin Off Your Plate?</h2>
   <p>Let’s talk about how I can help your business run smoother.</p>
-  <a href="mailto:youremail@example.com">Contact Me</a>
+  <a href="mailto:adelafuentegearupautoadmin@gmail.com">Contact Me</a>
 </section>
 
 <footer>
-  <p>© 2026 Your Business Name · Virtual Administrative Support</p>
+  <p>© 2026 GearUp Auto Administration · Virtual Administrative Support</p>
 </footer>
 
 </body>
