--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
       color: #333;
       line-height: 1.6;
     }
-    header {
-      background: #1f2937;
-      color: #fff;
-      padding: 2rem 1rem;
-      text-align: center;
+   <header>
+  <img src="gear up auto logo.png" alt="Gear Up Auto Admin Logo" style="max-width: 280px; margin-bottom: 1rem;">
+  <p>Virtual admin support for service businesses — stay booked, organized, and paid.</p>
+</header>
     }
     section {
       max-width: 900px;
