--- a/index.html
+++ b/index.html
@@ -1,100 +1,183 @@
-<!DOCTYPE html>  
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Virtual Admin Support for Service Businesses</title>
+  <title>Gear Up Auto Admin</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #f7f7f7;
-      color: #333;
+      background: #f5f7fb;
+      color: #1f2937;
       line-height: 1.6;
     }
-   <header>
-  <img src="gear up auto logo.png" alt="Gear Up Auto Admin Logo" style="max-width: 280px; margin-bottom: 1rem;">
-  <p>Virtual admin support for service businesses — stay booked, organized, and paid.</p>
-</header>
-    }
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-    .services, .benefits {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1rem;
-    }
-    .card {
-      background: #fff;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    .cta {
-      background: #2563eb;
-      color: #fff;
+
+    header {
+      background: #3b2a78; /* royal purple */
+      color: #ffffff;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 3rem 1rem;
     }
+
+    header img {
+      max-width: 300px;
+      margin-bottom: 1rem;
+    }
+
+    section {
+      max-width: 1000px;
+      margin: auto;
+      padding: 3rem 1.5rem;
+    }
+
+    h2 {
+      color: #3b2a78;
+      margin-bottom: 1rem;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.25rem;
+      margin-top: 1.5rem;
+    }
+
+    .card {
+      background: #ffffff;
+      padding: 1.75rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    .card strong {
+      color: #3b2a78;
+      font-size: 1.1rem;
+    }
+
+    .cta {
+      background: #6bbcff; /* baby blue */
+      text-align: center;
+      padding: 3rem 1.5rem;
+    }
+
+    .cta h2 {
+      color: #1f2937;
+    }
+
     .cta a {
-      background: #fff;
-      color: #2563eb;
-      padding: 0.75rem 1.5rem;
-      border-radius: 5px;
+      background: #3b2a78;
+      color: #ffffff;
+      padding: 0.85rem 1.75rem;
+      border-radius: 6px;
       text-decoration: none;
       font-weight: bold;
       display: inline-block;
       margin-top: 1rem;
     }
+
     footer {
+      background: #e6e9f2;
       text-align: center;
-      padding: 1rem;
+      padding: 1.5rem;
       font-size: 0.9rem;
-      background: #e5e7eb;
+      color: #4b5563;
     }
   </style>
 </head>
+
 <body>
 
 <header>
-  <h1>Virtual Admin Support for Service Businesses</h1>
-  <p>I help mobile mechanics and service pros stay booked, organized, and paid — without the admin headaches.</p>
+  <img src="logo.png" alt="Gear Up Auto Admin Logo">
+  <p>Virtual administrative support for service businesses — stay organized, responsive, and paid.</p>
 </header>
 
 <section>
+  <h2>Take Admin Off Your Plate</h2>
+  <p>
+    Running a service business means juggling customer calls, scheduling, invoices, and follow-ups —
+    often while you’re already busy doing the work.
+  </p>
+  <p>
+    Gear Up Auto Admin provides reliable virtual administrative support for service-based businesses,
+    helping you stay organized, responsive, and professional without hiring in-house staff.
+  </p>
+</section>
+
+<section>
   <h2>What I Handle For You</h2>
-  <div class="services">
-    <div class="card">Answering customer calls & messages so you don’t miss jobs & message handling</div>
-    <div class="card">Scheduling jobs and managing your calendar</div>
-    <div class="card">Sending invoices, estimates, and payment follow-ups, estimates & follow‑ups</div>
-    <div class="card">Keeping job details organized and up to date & job tracking</div>
-    <div class="card">Managing emails and customer communication</div>
-    <div class="card">General admin tasks that slow you down</div>
+  <div class="grid">
+    <div class="card">Answering customer calls and messages</div>
+    <div class="card">Scheduling jobs and managing calendars</div>
+    <div class="card">Sending invoices, estimates, and payment follow-ups</div>
+    <div class="card">Email and customer communication</div>
+    <div class="card">Organizing job and customer details</div>
+    <div class="card">General admin tasks that slow your business down</div>
   </div>
 </section>
 
 <section>
-  <h2>Why This Works</h2>
-  <div class="benefits">
-    <div class="card">Built specifically for mobile mechanics and service-based businesses & field service businesses</div>
-    <div class="card">Spend more time on paid work, less time on admin</div>
-    <div class="card">Your customers get fast, professional responses</div>
-    <div class="card">Flexible support that grows with your business</div>
+  <h2>Why Gear Up Auto Admin</h2>
+  <div class="grid">
+    <div class="card">Built for service-based businesses</div>
+    <div class="card">More time for paid work</div>
+    <div class="card">Professional, consistent customer communication</div>
+    <div class="card">Flexible support without hiring employees</div>
+  </div>
+</section>
+
+<section>
+  <h2>How It Works</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>1. Quick Consult</strong><br>
+      We discuss your business, workload, and what tasks you want off your plate.
+    </div>
+    <div class="card">
+      <strong>2. Custom Support Plan</strong><br>
+      I create a support plan tailored to your needs and volume.
+    </div>
+    <div class="card">
+      <strong>3. Ongoing Admin Support</strong><br>
+      I handle the admin while you focus on your business.
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Flexible Support Packages</h2>
+  <p>
+    Every business is different. I offer flexible monthly and custom admin support packages
+    based on your needs, workload, and growth stage.
+  </p>
+  <div class="grid">
+    <div class="card">
+      <strong>Starter Support</strong><br>
+      Ideal for small or growing service businesses.
+    </div>
+    <div class="card">
+      <strong>Growth Support</strong><br>
+      Consistent scheduling, communication, and follow-ups.
+    </div>
+    <div class="card">
+      <strong>Full Support</strong><br>
+      End-to-end administrative assistance.
+    </div>
   </div>
 </section>
 
 <section class="cta">
-  <h2>Ready to Take Admin Off Your Plate?</h2>
-  <p>Let’s talk about how I can help your business run smoother.</p>
+  <h2>Ready to Gear Up Your Business?</h2>
+  <p>Let’s talk about how admin support can help your business run smoother.</p>
   <a href="mailto:adelafuentegearupautoadmin@gmail.com">Contact Me</a>
 </section>
 
 <footer>
-  <p>© 2026 GearUp Auto Administration · Virtual Administrative Support</p>
+  © 2026 Gear Up Auto Admin · Virtual Administrative Support
 </footer>
 
 </body>
 </html>
+
