--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <section class="cta">
   <h2>Ready to Gear Up Your Business?</h2>
   <p>Let’s talk about how admin support can help your business run smoother.</p>
-  <a href="mailto:adelafuentegearupautoadmin@gmail.com">Contact Me</a>
+  <a href="mailto:adelafuentegearupauto@gmail.com">Contact Me</a>
 </section>
 
 <footer>
