--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <section class="cta">
   <h2>Ready to Gear Up Your Business?</h2>
   <p>Let’s talk about the right support package for your business.</p>
-  <a href="mailto:adelafuentegearupautoadmin@gmail.com">Contact Me</a>
+  <a href="mailto:adelafuentegearupauto@gmail.com">Contact Me</a>
 </section>
 
 <footer>
