--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>    
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Gear Up Auto Admin | Admin Support for Mobile Mechanics</title>
+<title>Gear Up Auto Admin | Never Miss Another Call</title>
 
 <style>
 
@@ -15,74 +15,79 @@ color:#222;
 }
 
 .section{
-padding:80px 20px;
+padding:85px 20px;
 }
 
 .container{
-max-width:1100px;
+max-width:1150px;
 margin:auto;
 }
 
 .hero{
-background:#2d1b69;
+background:#24125f;
 color:white;
 text-align:center;
-padding:110px 20px;
+padding:120px 20px;
 }
 
 .button{
-background:#7fd7ff;
+background:#86e0ff;
 color:#111;
-padding:18px 34px;
-border-radius:12px;
+padding:18px 36px;
+border-radius:14px;
 text-decoration:none;
 font-size:20px;
 font-weight:bold;
 display:inline-block;
-margin-top:20px;
+margin-top:25px;
 }
 
-.card-grid{
+.grid{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
 gap:30px;
-margin-top:40px;
+margin-top:45px;
 }
 
 .card{
 background:white;
-padding:30px;
-border-radius:16px;
-box-shadow:0 6px 25px rgba(0,0,0,0.07);
+padding:32px;
+border-radius:18px;
+box-shadow:0 8px 30px rgba(0,0,0,0.06);
 }
 
 .highlight{
-border:4px solid #7fd7ff;
+border:4px solid #86e0ff;
+transform:scale(1.03);
 }
 
 .dark{
-background:#f4f6fb;
+background:#f5f7fc;
 }
 
 .cta{
-background:#2d1b69;
+background:#24125f;
 color:white;
 text-align:center;
 }
 
 .price{
-color:#2d1b69;
-font-size:28px;
+font-size:30px;
 font-weight:bold;
+color:#24125f;
 }
 
 ul{
-line-height:1.8;
+line-height:1.9;
+padding-left:18px;
+}
+
+.big{
+font-size:42px;
 }
 
 </style>
 </head>
-
 
 <body>
 
@@ -90,122 +95,155 @@ line-height:1.8;
 <section class="hero">
 <div class="container">
 
-<h1 style="font-size:52px;">
-Stop Missing Calls. Start Booking More Jobs.
+<h1 class="big">
+Never Miss Another Call — Or Another $500 Job
 </h1>
 
-<p style="font-size:24px; max-width:800px; margin:auto;">
-Professional admin support built specifically for mobile mechanics and service businesses.
-More bookings. Less paperwork. Higher revenue.
+<p style="font-size:24px; max-width:820px; margin:auto;">
+Professional admin support built specifically for mobile mechanics who are tired of losing revenue to missed calls, delayed estimates, and scheduling chaos.
 </p>
 
 <a href="tel:2103322918" class="button">
-📞 Call Now to Get Started
+📞 Call Now to Get Booked Out
 </a>
 
 <p style="margin-top:20px; font-size:20px;">
-🔥 Get <strong>15% OFF your first month + setup fee</strong> when you onboard before Friday, February 6th.
+🔥 <strong>Now onboarding a limited number of new clients.</strong>
+</p>
+
+<p style="font-size:20px;">
+Get <strong>15% OFF your first month + setup fee</strong> when you enroll before Friday, February 6th.
 </p>
 
 </div>
 </section>
 
 
-<!-- AUTHORITY SECTION -->
+<!-- AUTHORITY -->
 <section class="section">
 <div class="container" style="text-align:center;">
 
-<h2 style="font-size:38px;">
-We Don’t Just Answer Phones — We Help Grow Your Business
+<h2 class="big">
+We Don’t Cost You Money — We Help Make It
 </h2>
 
-<p style="font-size:20px; max-width:850px; margin:auto;">
-Every missed call is lost revenue. Every delayed estimate is a job your competitor gets.
+<p style="font-size:21px; max-width:900px; margin:auto;">
+Most mobile mechanics lose **$2,000–$5,000 per month** from missed calls alone.
 
-Gear Up Auto Admin acts as your professional front office — so you can stay focused on turning wrenches while we keep your schedule full.
+Gear Up Auto Admin acts as your professional front office — capturing every opportunity while you stay focused on the work that actually pays.
 </p>
 
 </div>
 </section>
 
 
-<!-- COST COMPARISON -->
+<!-- REVENUE CALCULATOR -->
 <section class="section dark">
 <div class="container" style="text-align:center;">
 
-<h2 style="font-size:36px;">
+<h2 class="big">
+What Is One Missed Call Worth?
+</h2>
+
+<div class="grid">
+
+<div class="card">
+<h3>If your average job is:</h3>
+<h2>$350</h2>
+</div>
+
+<div class="card">
+<h3>Miss just 5 calls:</h3>
+<h2>$1,750 lost</h2>
+</div>
+
+<div class="card highlight">
+<h3>Miss 10 calls:</h3>
+<h2>$3,500 gone</h2>
+<p>Every. Single. Month.</p>
+</div>
+
+</div>
+
+<p style="margin-top:40px; font-size:22px;">
+One captured job can nearly pay for your entire admin service.
+</p>
+
+</div>
+</section>
+
+
+<!-- EMPLOYEE COST -->
+<section class="section">
+<div class="container" style="text-align:center;">
+
+<h2 class="big">
 Why Smart Mechanics Skip Hiring Office Staff
 </h2>
 
-<div class="card-grid">
+<div class="grid">
 
 <div class="card">
 <h3>Hiring an Employee</h3>
 
 <ul style="list-style:none; padding:0;">
-<li>Salary: $2,500 – $3,500/month</li>
+<li>$2,500–$3,500 salary</li>
 <li>Payroll taxes</li>
-<li>Training time</li>
+<li>Training</li>
 <li>Sick days</li>
 <li>No-shows</li>
-<li>Turnover risk</li>
+<li>Turnover</li>
 </ul>
 
-<h2 style="color:#c0392b;">
+<h2 style="color:#d64545;">
 $3K–$4K+ Monthly
 </h2>
 
 </div>
-
 
 <div class="card highlight">
 <h3>Gear Up Auto Admin</h3>
 
 <ul style="list-style:none; padding:0;">
 <li>✔ No payroll</li>
-<li>✔ No HR headaches</li>
+<li>✔ No HR stress</li>
 <li>✔ No training</li>
 <li>✔ Ready immediately</li>
 <li>✔ Built for mechanics</li>
 </ul>
 
 <h2 class="price">
-Starting at $450/month
+Starting at $450/mo
 </h2>
 
 </div>
 
 </div>
-
-<p style="margin-top:40px; font-size:20px;">
-Keep more profit while booking more work.
-</p>
 
 </div>
 </section>
 
 
-<!-- REVENUE GENERATOR -->
-<section class="section">
+<!-- JOB CONVERSION -->
+<section class="section dark">
 <div class="container" style="text-align:center;">
 
-<h2 style="font-size:36px;">
+<h2 class="big">
 Turn Price Shoppers Into Paying Customers
 </h2>
 
-<p style="font-size:20px;">
-Most shops lose thousands every year from missed calls and shoppers who never book.
-
-We help convert those leads into completed, revenue-generating jobs.
+<p style="font-size:21px;">
+We don’t just schedule — we help convert incoming leads into completed, revenue-producing jobs.
 </p>
 
-<div class="card" style="background:#2d1b69; color:white; margin-top:35px;">
-<h3>Job Conversion Add-On</h3>
+<div class="card" style="background:#24125f; color:white; margin-top:40px;">
+<h3>🔥 Performance-Based Job Conversion</h3>
 
-<p style="font-size:24px;">
+<p style="font-size:26px;">
 $30 per completed job  
 <br><strong>OR</strong><br>
-10% of the repair total — whichever is greater.
+10% of the repair total  
+<br>— whichever is greater.
 </p>
 
 <p>You only pay when revenue is generated.</p>
@@ -217,14 +255,14 @@ $30 per completed job
 
 
 <!-- PRICING -->
-<section class="section dark">
+<section class="section">
 <div class="container">
 
-<h2 style="text-align:center; font-size:38px;">
+<h2 class="big" style="text-align:center;">
 Simple, Profitable Pricing
 </h2>
 
-<div class="card-grid">
+<div class="grid">
 
 <div class="card">
 <h3>Bronze</h3>
@@ -233,7 +271,7 @@ Simple, Profitable Pricing
 <ul>
 <li>Call & text handling</li>
 <li>Appointment scheduling</li>
-<li>Reminders & confirmations</li>
+<li>Reminders</li>
 <li>Customer intake</li>
 <li>Missed call follow-ups</li>
 <li>Monthly performance tracking</li>
@@ -242,7 +280,7 @@ Simple, Profitable Pricing
 
 
 <div class="card highlight">
-<h3>Silver (Most Popular)</h3>
+<h3>Silver — Most Popular</h3>
 <p class="price">$650/mo</p>
 
 <ul>
@@ -263,7 +301,7 @@ Simple, Profitable Pricing
 
 <ul>
 <li>Everything in Silver</li>
-<li>Live call answering + texting</li>
+<li>Live answering + texting</li>
 <li>Schedule optimization</li>
 <li>Customer updates</li>
 <li>Invoice follow-ups</li>
@@ -277,22 +315,24 @@ Simple, Profitable Pricing
 </section>
 
 
-<!-- TRUST -->
-<section class="section">
+<!-- TRUST STACK -->
+<section class="section dark">
 <div class="container" style="text-align:center;">
 
-<h2>Built for Busy Mechanics</h2>
+<h2 class="big">
+Built for Busy Mechanics
+</h2>
 
-<p style="font-size:20px;">
-Whether you're under the hood or on the road, your customers are handled professionally.
+<p style="font-size:21px;">
+Whether you're under the hood or driving between jobs, your customers are handled professionally.
 </p>
 
-<p style="font-size:18px;">
+<p style="font-size:19px;">
 ✔ Answered as YOUR business  
-<br>✔ Your script and policies  
+<br>✔ Your scripts and policies  
 <br>✔ No customer sharing  
 <br>✔ Fully confidential  
-<br>✔ Professional communication  
+<br>✔ Reliable, professional communication  
 </p>
 
 </div>
@@ -303,7 +343,7 @@ Whether you're under the hood or on the road, your customers are handled profess
 <section class="section cta">
 <div class="container">
 
-<h2 style="font-size:44px;">
+<h2 class="big">
 Ready to Stop Losing Jobs?
 </h2>
 
@@ -312,10 +352,10 @@ Secure professional admin support before the busy season hits.
 </p>
 
 <a href="tel:2103322918" class="button">
-Call Now — Spots Are Limited
+Call Now — Spots Are Filling Fast
 </a>
 
-<p style="margin-top:20px;">
+<p style="margin-top:25px; font-size:20px;">
 🔥 Save 15% on your first month + setup when you enroll before February 6th.
 </p>
 
@@ -324,5 +364,3 @@ Call Now — Spots Are Limited
 
 </body>
 </html>
-
-
