--- a/index.html
+++ b/index.html
@@ -1,89 +1,113 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Gear Up Auto Admin | Never Miss Another Call</title>
+<title>Gear Up Admin Services</title>
 
 <style>
 
 body{
-margin:0;
-font-family:Arial, sans-serif;
-color:#222;
+    margin:0;
+    font-family: 'Segoe UI', sans-serif;
+    background:#f7f9fc;
 }
 
-.section{
-padding:85px 20px;
+/* HEADER */
+
+.header{
+    background:#0e1a2b;
+    color:white;
+    padding:20px;
+    text-align:center;
 }
 
-.container{
-max-width:1150px;
-margin:auto;
+.logo-box{
+    background:white;
+    padding:15px;
+    display:inline-block;
+    border-radius:12px;
+    margin-bottom:10px;
 }
+
+.phone-box{
+    background:#1f2e46;
+    padding:12px;
+    border-radius:10px;
+    font-size:20px;
+    font-weight:bold;
+}
+
+/* HERO */
 
 .hero{
-background:#24125f;
-color:white;
-text-align:center;
-padding:120px 20px;
+    text-align:center;
+    padding:70px 20px;
 }
 
-.button{
-background:#86e0ff;
-color:#111;
-padding:18px 36px;
-border-radius:14px;
-text-decoration:none;
-font-size:20px;
-font-weight:bold;
-display:inline-block;
-margin-top:25px;
+.hero h1{
+    font-size:44px;
+    margin-bottom:10px;
 }
 
-.grid{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-gap:30px;
-margin-top:45px;
-}
-
-.card{
-background:white;
-padding:32px;
-border-radius:18px;
-box-shadow:0 8px 30px rgba(0,0,0,0.06);
-}
-
-.highlight{
-border:4px solid #86e0ff;
-transform:scale(1.03);
-}
-
-.dark{
-background:#f5f7fc;
+.hero p{
+    font-size:20px;
+    color:#555;
 }
 
 .cta{
-background:#24125f;
-color:white;
-text-align:center;
+    background:#2b6cff;
+    color:white;
+    padding:16px 28px;
+    border:none;
+    border-radius:10px;
+    font-size:18px;
+    margin-top:20px;
+    cursor:pointer;
+}
+
+/* SECTIONS */
+
+.section{
+    padding:60px 20px;
+    max-width:1100px;
+    margin:auto;
+}
+
+.cards{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+    gap:25px;
+}
+
+.card{
+    background:white;
+    padding:30px;
+    border-radius:14px;
+    box-shadow:0 6px 18px rgba(0,0,0,.06);
 }
 
 .price{
-font-size:30px;
-font-weight:bold;
-color:#24125f;
+    font-size:32px;
+    color:#2b6cff;
+    margin:10px 0;
 }
 
-ul{
-line-height:1.9;
-padding-left:18px;
+.highlight{
+    background:#e8f0ff;
+    padding:40px;
+    border-radius:16px;
+    text-align:center;
 }
 
-.big{
-font-size:42px;
+/* FOOTER */
+
+.footer{
+    text-align:center;
+    padding:30px;
+    background:#0e1a2b;
+    color:white;
 }
 
 </style>
@@ -91,276 +115,185 @@ font-size:42px;
 
 <body>
 
-<!-- HERO -->
-<section class="hero">
-<div class="container">
+<div class="header">
 
-<h1 class="big">
-Never Miss Another Call — Or Another $500 Job
-</h1>
+    <div class="logo-box">
+        <h2>GEAR UP ADMIN SERVICES</h2>
+    </div>
 
-<p style="font-size:24px; max-width:820px; margin:auto;">
-Professional admin support built specifically for mobile mechanics who are tired of losing revenue to missed calls, delayed estimates, and scheduling chaos.
-</p>
+    <div class="phone-box">
+        Call or Text: 210-332-2918
+    </div>
 
-<a href="tel:2103322918" class="button">
-📞 Call Now to Get Booked Out
-</a>
-
-<p style="margin-top:20px; font-size:20px;">
-🔥 <strong>Now onboarding a limited number of new clients.</strong>
-</p>
-
-<p style="font-size:20px;">
-Get <strong>15% OFF your first month + setup fee</strong> when you enroll before Friday, February 6th.
-</p>
+    <p>Business Hours: 9AM – 6PM</p>
 
 </div>
-</section>
 
 
-<!-- AUTHORITY -->
-<section class="section">
-<div class="container" style="text-align:center;">
+<div class="hero">
 
-<h2 class="big">
-We Don’t Cost You Money — We Help Make It
-</h2>
+    <h1>Stop Missing Calls. Start Booking More Jobs.</h1>
 
-<p style="font-size:21px; max-width:900px; margin:auto;">
-Most mobile mechanics lose **$2,000–$5,000 per month** from missed calls alone.
+    <p>We handle your phones, scheduling, and price shoppers so you can focus on making money.</p>
 
-Gear Up Auto Admin acts as your professional front office — capturing every opportunity while you stay focused on the work that actually pays.
-</p>
+    <button class="cta">
+        Claim Your 15% Launch Discount
+    </button>
 
 </div>
-</section>
 
 
-<!-- REVENUE CALCULATOR -->
-<section class="section dark">
-<div class="container" style="text-align:center;">
 
-<h2 class="big">
-What Is One Missed Call Worth?
-</h2>
+<div class="section highlight">
 
-<div class="grid">
+    <h2>💰 Why Businesses Switch to Gear Up</h2>
+
+    <p>
+    Hiring an employee can cost <b>$3,000–$4,000/month</b> after payroll taxes,
+    training, and downtime.
+    </p>
+
+    <h3>Our packages deliver the same output at a fraction of the cost.</h3>
+
+    <p><b>More bookings. Less overhead. Higher profit.</b></p>
+
+</div>
+
+
+
+<div class="section">
+
+<h2 style="text-align:center;">Monthly Packages</h2>
+
+<div class="cards">
 
 <div class="card">
-<h3>If your average job is:</h3>
-<h2>$350</h2>
-</div>
+<h3>Starter</h3>
+<div class="price">$695/mo</div>
 
-<div class="card">
-<h3>Miss just 5 calls:</h3>
-<h2>$1,750 lost</h2>
-</div>
+✔ Call answering  
+✔ Message taking  
+✔ Basic scheduling  
 
-<div class="card highlight">
-<h3>Miss 10 calls:</h3>
-<h2>$3,500 gone</h2>
-<p>Every. Single. Month.</p>
-</div>
+<p><b>Perfect for small but growing businesses.</b></p>
 
-</div>
-
-<p style="margin-top:40px; font-size:22px;">
-One captured job can nearly pay for your entire admin service.
-</p>
-
-</div>
-</section>
-
-
-<!-- EMPLOYEE COST -->
-<section class="section">
-<div class="container" style="text-align:center;">
-
-<h2 class="big">
-Why Smart Mechanics Skip Hiring Office Staff
-</h2>
-
-<div class="grid">
-
-<div class="card">
-<h3>Hiring an Employee</h3>
-
-<ul style="list-style:none; padding:0;">
-<li>$2,500–$3,500 salary</li>
-<li>Payroll taxes</li>
-<li>Training</li>
-<li>Sick days</li>
-<li>No-shows</li>
-<li>Turnover</li>
-</ul>
-
-<h2 style="color:#d64545;">
-$3K–$4K+ Monthly
-</h2>
-
-</div>
-
-<div class="card highlight">
-<h3>Gear Up Auto Admin</h3>
-
-<ul style="list-style:none; padding:0;">
-<li>✔ No payroll</li>
-<li>✔ No HR stress</li>
-<li>✔ No training</li>
-<li>✔ Ready immediately</li>
-<li>✔ Built for mechanics</li>
-</ul>
-
-<h2 class="price">
-Starting at $450/mo
-</h2>
-
-</div>
-
-</div>
-
-</div>
-</section>
-
-
-<!-- JOB CONVERSION -->
-<section class="section dark">
-<div class="container" style="text-align:center;">
-
-<h2 class="big">
-Turn Price Shoppers Into Paying Customers
-</h2>
-
-<p style="font-size:21px;">
-We don’t just schedule — we help convert incoming leads into completed, revenue-producing jobs.
-</p>
-
-<div class="card" style="background:#24125f; color:white; margin-top:40px;">
-<h3>🔥 Performance-Based Job Conversion</h3>
-
-<p style="font-size:26px;">
-$30 per completed job  
-<br><strong>OR</strong><br>
-10% of the repair total  
-<br>— whichever is greater.
-</p>
-
-<p>You only pay when revenue is generated.</p>
-
-</div>
-
-</div>
-</section>
-
-
-<!-- PRICING -->
-<section class="section">
-<div class="container">
-
-<h2 class="big" style="text-align:center;">
-Simple, Profitable Pricing
-</h2>
-
-<div class="grid">
-
-<div class="card">
-<h3>Bronze</h3>
-<p class="price">Starting at $450/mo</p>
-
-<ul>
-<li>Call & text handling</li>
-<li>Appointment scheduling</li>
-<li>Reminders</li>
-<li>Customer intake</li>
-<li>Missed call follow-ups</li>
-<li>Monthly performance tracking</li>
-</ul>
-</div>
-
-
-<div class="card highlight">
-<h3>Silver — Most Popular</h3>
-<p class="price">$650/mo</p>
-
-<ul>
-<li>Everything in Bronze</li>
-<li><strong>Priority answering</strong></li>
-<li>Same-day callbacks</li>
-<li>Estimate follow-ups</li>
-<li>Service reminders</li>
-<li>CRM updates</li>
-<li>Email support</li>
-</ul>
 </div>
 
 
 <div class="card">
-<h3>Gold</h3>
-<p class="price">$850/mo</p>
+<h3>Growth</h3>
+<div class="price">$995/mo</div>
 
-<ul>
-<li>Everything in Silver</li>
-<li>Live answering + texting</li>
-<li>Schedule optimization</li>
-<li>Customer updates</li>
-<li>Invoice follow-ups</li>
-<li>Warranty tracking</li>
-</ul>
-</div>
+✔ Everything in Starter  
+✔ Advanced scheduling  
+✔ Customer follow-ups  
+✔ Service coordination  
+
+<p><b>Our most popular plan.</b></p>
 
 </div>
 
+
+<div class="card">
+<h3>Elite</h3>
+<div class="price">$1,495/mo</div>
+
+✔ Priority support  
+✔ Full calendar management  
+✔ Client communication  
+✔ Workflow optimization  
+
+<p><b>Built for serious operators ready to scale.</b></p>
+
 </div>
-</section>
+
+</div>
+</div>
 
 
-<!-- TRUST STACK -->
-<section class="section dark">
-<div class="container" style="text-align:center;">
 
-<h2 class="big">
-Built for Busy Mechanics
+<div class="section highlight">
+
+<h2>🚀 Revenue Boost Add-On (NEW)</h2>
+
+<h3>We Don’t Just Answer Calls — We Convert Them.</h3>
+
+<p>
+Many callers are price shoppers. We professionally guide them,
+build value, and help turn them into paying customers.
+</p>
+
+<h2 style="color:#2b6cff;">
+$30 Per Completed Job  
+<br>
++ 10% Commission on Repair Orders Over $300
 </h2>
 
-<p style="font-size:21px;">
-Whether you're under the hood or driving between jobs, your customers are handled professionally.
-</p>
-
-<p style="font-size:19px;">
-✔ Answered as YOUR business  
-<br>✔ Your scripts and policies  
-<br>✔ No customer sharing  
-<br>✔ Fully confidential  
-<br>✔ Reliable, professional communication  
-</p>
+<p><b>You only pay when revenue is generated.</b></p>
 
 </div>
-</section>
 
 
-<!-- FINAL CLOSE -->
-<section class="section cta">
-<div class="container">
 
-<h2 class="big">
-Ready to Stop Losing Jobs?
-</h2>
+<div class="section">
 
-<p style="font-size:24px;">
-Secure professional admin support before the busy season hits.
-</p>
+<h2 style="text-align:center;">Why Packages Beat A La Carte</h2>
 
-<a href="tel:2103322918" class="button">
-Call Now — Spots Are Filling Fast
-</a>
+<div class="cards">
 
-<p style="margin-top:25px; font-size:20px;">
-🔥 Save 15% on your first month + setup when you enroll before February 6th.
-</p>
+<div class="card">
+<h3>A La Carte</h3>
+<p>Costs add up quickly.</p>
+<p>Unpredictable monthly spend.</p>
+<p>No system.</p>
+</div>
+
+<div class="card">
+<h3>Packages</h3>
+<p>Flat predictable cost.</p>
+<p>Bundled savings.</p>
+<p>Streamlined operations.</p>
+<p><b>Maximum profitability.</b></p>
+</div>
 
 </div>
-</section>
+</div>
+
+
+
+<div class="section highlight">
+
+<h2>🎉 Limited-Time Offer</h2>
+
+<h3>Take 15% OFF</h3>
+
+<p>
+Your discount applies to:
+
+✅ One-time setup fee  
+✅ First month of service  
+</p>
+
+<h3>Secure your spot before the promotion ends.</h3>
+
+<button class="cta">
+Get Started Today
+</button>
+
+</div>
+
+
+
+<div class="footer">
+
+Gear Up Admin Services  
+<br><br>
+210-332-2918  
+<br><br>
+9AM – 6PM  
+
+</div>
 
 </body>
 </html>
+
